--- a/Готовые модели.ipynb
+++ b/Готовые модели.ipynb
@@ -146,20 +146,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<style>#sk-container-id-1 {\n",
@@ -566,10 +552,13 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;KNeighborsClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(algorithm=&#x27;brute&#x27;, leaf_size=1, metric=&#x27;canberra&#x27;,\n",
+       "                     n_neighbors=800, weights=&#x27;distance&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;KNeighborsClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier(algorithm=&#x27;brute&#x27;, leaf_size=1, metric=&#x27;canberra&#x27;,\n",
+       "                     n_neighbors=800, weights=&#x27;distance&#x27;)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "KNeighborsClassifier()"
+       "KNeighborsClassifier(algorithm='brute', leaf_size=1, metric='canberra',\n",
+       "                     n_neighbors=800, weights='distance')"
       ]
      },
      "execution_count": 5,
@@ -578,25 +567,61 @@
     }
    ],
    "source": [
-    "# Создание модели Logistic Regression\n",
-    "logistic_regression_model = LogisticRegression()\n",
+    "logistic_regression_model = LogisticRegression(\n",
+    "    solver=\"liblinear\",\n",
+    "    max_iter=100,\n",
+    "    C=1.5,\n",
+    "    intercept_scaling=4\n",
+    ")\n",
     "logistic_regression_model.fit(X_train, y_train)\n",
     "\n",
+    "\n",
     "# Создание модели Decision Tree\n",
-    "decision_tree_model = DecisionTreeClassifier()\n",
+    "decision_tree_model = DecisionTreeClassifier(\n",
+    "    criterion='gini',\n",
+    "    max_depth=8,\n",
+    "    min_samples_split=50,\n",
+    "    min_samples_leaf=20\n",
+    ")\n",
     "decision_tree_model.fit(X_train, y_train)\n",
     "\n",
+    "\n",
     "# Создание модели K-Nearest Neighbors\n",
-    "knn_model = KNeighborsClassifier()\n",
+    "knn_model = KNeighborsClassifier(\n",
+    "    n_neighbors=800,\n",
+    "    weights=\"distance\",\n",
+    "    algorithm=\"brute\",\n",
+    "    leaf_size=1,\n",
+    "    metric=\"canberra\"\n",
+    ")\n",
     "knn_model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c2ebd8b0-3f81-4365-9f84-44bf50bbcbe4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Logistic Regression: 0.755\n",
+      "Accuracy of Decision Tree: 0.785\n",
+      "Accuracy of K-Nearest Neighbors: 0.69\n",
+      "ROC AUC of Logistic Regression: 0.7962833099579243\n",
+      "ROC AUC of Decision Tree: 0.7949976624590929\n",
+      "ROC AUC of K-Nearest Neighbors: 0.791841982234689\n",
+      "Precision of Logistic Regression: 0.779874213836478\n",
+      "Precision of Decision Tree: 0.7950310559006211\n",
+      "Precision of K-Nearest Neighbors: 0.69\n",
+      "Recall of Logistic Regression: 0.8985507246376812\n",
+      "Recall of Decision Tree: 0.927536231884058\n",
+      "Recall of K-Nearest Neighbors: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "y_prob_logistic = logistic_regression_model.predict_proba(X_test)[:, 1]\n",
     "y_prob_decision_tree = decision_tree_model.predict_proba(X_test)[:, 1]\n",
